# OpenClawDefender

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  LICENSE-MIT  README.md  SECURITY.md  Vagrantfile  certified-servers.json  claw-wall.service  com.clawai.daemon.plist  com.clawdefender.daemon.plist  deny.toml  install.sh  justfile  lima.yaml
claw-wall-daemon/: Cargo.toml
claw-wall-daemon/src/: ai_analyzer.rs  main.rs  tui.rs
claw-wall-ebpf/: Cargo.toml
claw-wall-ebpf/src/: main.rs
clients/claw-cli/: Cargo.toml
clients/claw-cli/src/: main.rs
clients/claw-cli/src/commands/: audit.rs  doctor.rs  init.rs  log.rs  mod.rs  policy.rs  proxy.rs  status.rs  unwrap.rs  wrap.rs
clients/clawdefender-app/src-tauri/: Cargo.toml  tauri.conf.json
clients/clawdefender-app/src-tauri/capabilities/: default.json
clients/clawdefender-app/src-tauri/icons/: icon.icns
clients/clawdefender-app/src-tauri/src/: commands.rs  daemon.rs  event_stream.rs  events.rs  ipc_client.rs  lib.rs  main.rs  monitor.rs  scanner.rs  state.rs  tray.rs  windows.rs
clients/clawdefender-cli/: Cargo.toml
clients/clawdefender-cli/src/: main.rs
clients/clawdefender-cli/src/commands/: behavioral.rs  chat.rs  config.rs  daemon.rs  doctor.rs  guard.rs  init.rs  log.rs  mod.rs  model.rs  network.rs  policy.rs  profile_cmd.rs  proxy.rs  scan.rs  serve.rs  status.rs  threat_intel.rs  unwrap.rs  usage.rs  wrap.rs
crates/claw-core/: Cargo.toml
crates/claw-core/src/: lib.rs
crates/claw-core/src/audit/: logger.rs  mod.rs  query.rs
crates/claw-core/src/config/: mod.rs  settings.rs
crates/claw-core/src/correlation/: mod.rs
crates/claw-core/src/event/: correlation.rs  mcp.rs  mod.rs  os.rs
crates/claw-core/src/ipc/: mod.rs  protocol.rs
crates/claw-core/src/policy/: matcher.rs  mod.rs  rule.rs
crates/claw-core/tests/: mcp_proxy_test.rs  security_tests.rs
crates/claw-daemon/: Cargo.toml
crates/claw-daemon/src/: ipc.rs  lib.rs  main.rs
crates/claw-mcp-proxy/: Cargo.toml
crates/claw-mcp-proxy/src/: lib.rs  main.rs
crates/claw-mcp-proxy/src/classifier/: mod.rs  rules.rs
crates/claw-mcp-proxy/src/jsonrpc/: mod.rs  parser.rs
crates/claw-mcp-proxy/src/proxy/: http.rs  mod.rs  stdio.rs
crates/claw-mcp-proxy/tests/: e2e_proxy_test.rs
crates/claw-mcp-proxy/tests/helpers/: mod.rs
crates/claw-sensor/: Cargo.toml
crates/claw-sensor/src/: lib.rs
crates/claw-sensor/src/eslogger/: parser.rs  process.rs  types.rs
crates/claw-sensor/src/fsevents/: mod.rs
crates/claw-sensor/src/proctree/: agent_id.rs  mod.rs
crates/claw-tui/: Cargo.toml
crates/claw-tui/src/: lib.rs  prompt.rs
crates/clawdefender-certify/: Cargo.toml
crates/clawdefender-certify/src/: harness.rs  level1.rs  level2.rs  level3.rs  lib.rs  manifest.rs  report.rs
crates/clawdefender-certify/tests/: certification_tests.rs
crates/clawdefender-core/: Cargo.toml
crates/clawdefender-core/src/: lib.rs  network_log.rs  rate_limit.rs
crates/clawdefender-core/src/audit/: logger.rs  mod.rs  query.rs
crates/clawdefender-core/tests/: behavioral_e2e.rs  behavioral_e2e_test.rs  behavioral_harness.rs  behavioral_harness_test.rs  behavioral_security_tests.rs  mcp_proxy_test.rs  security_tests.rs
crates/clawdefender-daemon/: Cargo.toml
crates/clawdefender-daemon/src/: event_router.rs  ipc.rs  lib.rs  main.rs  mock_network_extension.rs
crates/clawdefender-daemon/tests/: guard_integration.rs  network_integration.rs
crates/clawdefender-guard/: Cargo.toml
crates/clawdefender-guard/src/: api.rs  api_auth.rs  connection.rs  fallback.rs  guard.rs  lib.rs  openapi.rs  openapi.yaml  policy_gen.rs  registry.rs  selftest.rs  types.rs  webhooks.rs
crates/clawdefender-guard/tests/: api_tests.rs  guard_tests.rs  installer_tests.rs  integration_tests.rs  perf_tests.rs  security_tests.rs
crates/clawdefender-mcp-proxy/: Cargo.toml
crates/clawdefender-mcp-proxy/src/: lib.rs  main.rs
crates/clawdefender-mcp-proxy/tests/: e2e_proxy_test.rs
crates/clawdefender-mcp-server/: Cargo.toml
crates/clawdefender-mcp-server/src/: auth.rs  lib.rs  protocol.rs  suggestions.rs  tools.rs  types.rs  validation.rs
crates/clawdefender-mcp-server/tests/: bench_tests.rs  mcp_server_integration_tests.rs  sdk_flow_tests.rs  security_tests.rs
crates/clawdefender-scanner/: Cargo.toml
crates/clawdefender-scanner/src/: client.rs  evidence.rs  finding.rs  lib.rs  progress.rs  report.rs  sandbox.rs  scanner.rs
crates/clawdefender-scanner/tests/: integration_tests.rs  scanner_tests.rs
crates/clawdefender-sensor/: Cargo.toml
crates/clawdefender-sensor/src/: lib.rs  limits.rs
crates/clawdefender-sensor/tests/: evasion_tests.rs  sensor_integration_tests.rs
crates/clawdefender-slm/: Cargo.toml
crates/clawdefender-slm/src/: analyzer.rs  cloud_backend.rs  context.rs  downloader.rs  engine.rs  gguf_backend.rs  lib.rs  model_manager.rs  model_registry.rs  noise_filter.rs  output_validator.rs  profiles.rs  sanitizer.rs
crates/clawdefender-slm/tests/: download_integration_test.rs  injection_tests.rs  integration_tests.rs
crates/clawdefender-swarm/: Cargo.toml
crates/clawdefender-swarm/src/: audit_hasher.rs  chat.rs  chat_server.rs  commander.rs  cost.rs  data_minimizer.rs  keychain.rs  lib.rs  llm_client.rs  output_sanitizer.rs  prompts.rs
crates/clawdefender-swarm/tests/: e2e_pipeline_tests.rs  security_tests.rs
crates/clawdefender-threat-intel/: Cargo.toml
crates/clawdefender-threat-intel/baseline/: blocklist.json  manifest.json
crates/clawdefender-threat-intel/src/: baseline.rs  cache.rs  client.rs  error.rs  lib.rs  signature.rs  types.rs
crates/clawdefender-tui/: Cargo.toml
crates/clawdefender-tui/src/: lib.rs  prompt.rs
examples/python-mcp-server/: README.md  clawdefender.toml  pyproject.toml  server.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_eslogger_parser.rs  fuzz_jsonrpc_parser.rs  fuzz_policy_engine.rs
sdks/python-agent/: README.md  pyproject.toml
sdks/python-agent/tests/: test_decorators.py  test_fallback.py  test_guard.py  test_installer.py  test_monitor.py  test_security.py
(+691 files in other folders)
