[workspace]
resolver = "2"
members = [
    "crates/claw-core",
    "crates/claw-mcp-proxy",
    "crates/claw-sensor",
    "crates/claw-slm",
    "crates/claw-swarm",
    "crates/claw-tui",
    "crates/claw-daemon",
    "clients/claw-cli",
    "tests/mock-mcp-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/clawai/clawai"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
glob = "0.3"
regex = "1"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
