[workspace]
resolver = "2"
exclude = [
    "clients/clawdefender-app/src-tauri",
]
members = [
    "crates/clawdefender-core",
    "crates/clawdefender-mcp-proxy",
    "crates/clawdefender-sensor",
    "crates/clawdefender-slm",
    "crates/clawdefender-swarm",
    "crates/clawdefender-tui",
    "crates/clawdefender-daemon",
    "clients/clawdefender-cli",
    "tests/mock-mcp-server",
    "tests/mock-eslogger",
    "crates/clawdefender-mcp-server",
    "crates/clawdefender-certify",
    "crates/clawdefender-scanner",
    "crates/clawdefender-guard",
    "crates/clawdefender-threat-intel",
]

[workspace.package]
version = "0.5.0-beta"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/clawdefender/clawdefender"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
glob = "0.3"
regex = "1"
aho-corasick = "1"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
