[package]
name = "claw-wall-daemon"
version = "0.2.0"
edition = "2021"
description = "User-space daemon for OpenClawDefender eBPF firewall"

[[bin]]
name = "claw-wall"
path = "src/main.rs"

[dependencies]
aya = "0.13"
aya-log = "0.2"
claw-wall-common = { path = "../claw-wall-common", features = ["user"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
