[package]
name = "claw-wall-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
claw-wall-common = { path = "../claw-wall-common" }

[[bin]]
name = "claw-wall-ebpf"
path = "src/main.rs"

[profile.dev]
opt-level = 2
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
