[package]
name = "clawdefender-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
clawdefender-mcp-proxy = { path = "../crates/clawdefender-mcp-proxy" }
clawdefender-core = { path = "../crates/clawdefender-core" }
clawdefender-sensor = { path = "../crates/clawdefender-sensor" }

[[bin]]
name = "fuzz_jsonrpc_parser"
path = "fuzz_targets/fuzz_jsonrpc_parser.rs"

[[bin]]
name = "fuzz_policy_engine"
path = "fuzz_targets/fuzz_policy_engine.rs"

[[bin]]
name = "fuzz_eslogger_parser"
path = "fuzz_targets/fuzz_eslogger_parser.rs"
