[package]
name = "claw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI client for interacting with the ClawAI daemon"

[[bin]]
name = "claw-cli"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../../crates/claw-core" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
