[package]
name = "claw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI client for interacting with the ClawAI daemon"

[[bin]]
name = "clawai"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../../crates/claw-core" }
claw-mcp-proxy = { path = "../../crates/claw-mcp-proxy" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
toml = "0.8"
