[package]
name = "clawdefender-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI client for interacting with the ClawDefender daemon"

[[bin]]
name = "clawdefender"
path = "src/main.rs"

[dependencies]
clawdefender-core = { path = "../../crates/clawdefender-core" }
clawdefender-mcp-proxy = { path = "../../crates/clawdefender-mcp-proxy" }
clawdefender-slm = { path = "../../crates/clawdefender-slm", features = ["gguf"] }
clawdefender-swarm = { path = "../../crates/clawdefender-swarm" }
clawdefender-mcp-server = { path = "../../crates/clawdefender-mcp-server" }
clawdefender-certify = { path = "../../crates/clawdefender-certify" }
clawdefender-scanner = { path = "../../crates/clawdefender-scanner" }
clawdefender-threat-intel = { path = "../../crates/clawdefender-threat-intel" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
open = "5"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
toml = "1.0"
