[package]
name = "claw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, policy engine, and shared infrastructure for ClawAI"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
