[package]
name = "claw-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ClawAI daemon orchestrating sensors, proxy, and policy engine"

[lib]
name = "claw_daemon"
path = "src/lib.rs"

[[bin]]
name = "claw-daemon"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../claw-core" }
claw-mcp-proxy = { path = "../claw-mcp-proxy" }
claw-sensor = { path = "../claw-sensor" }
claw-tui = { path = "../claw-tui" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
