[package]
name = "claw-mcp-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP protocol proxy with JSON-RPC interception for ClawAI"

[lib]
name = "claw_mcp_proxy"
path = "src/lib.rs"

[[bin]]
name = "claw-mcp-proxy"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../claw-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
axum = "0.8"
reqwest = { version = "0.12", features = ["stream"] }
hyper = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
serde_json = { workspace = true }
