[package]
name = "claw-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for ClawAI interactive prompts and dashboards"

[dependencies]
claw-core = { path = "../claw-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
