[package]
name = "clawdefender-certify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claw Compliant certification harness for MCP servers"

[dependencies]
clawdefender-core = { path = "../clawdefender-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
