[package]
name = "clawdefender-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, policy engine, and shared infrastructure for ClawDefender"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
aho-corasick = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
