[package]
name = "clawdefender-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ClawDefender daemon orchestrating sensors, proxy, and policy engine"

[lib]
name = "clawdefender_daemon"
path = "src/lib.rs"

[[bin]]
name = "clawdefender-daemon"
path = "src/main.rs"

[dependencies]
clawdefender-core = { path = "../clawdefender-core" }
clawdefender-mcp-proxy = { path = "../clawdefender-mcp-proxy" }
clawdefender-sensor = { path = "../clawdefender-sensor" }
clawdefender-slm = { path = "../clawdefender-slm" }
clawdefender-swarm = { path = "../clawdefender-swarm" }
clawdefender-tui = { path = "../clawdefender-tui" }
clawdefender-mcp-server = { path = "../clawdefender-mcp-server" }
clawdefender-guard = { path = "../clawdefender-guard" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
notify = "7"

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
