[package]
name = "clawdefender-guard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent self-protection guard for ClawDefender"

[dependencies]
clawdefender-core = { path = "../clawdefender-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
sha2 = "0.10"
async-trait = "0.1"
dirs = "5"
semver = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
