[package]
name = "clawdefender-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server that lets AI agents declare intent, request permission, and report actions to ClawDefender"

[dependencies]
clawdefender-core = { path = "../clawdefender-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = "0.8"
rand = "0.9"
hex = "0.4"
dirs = "6"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
