[package]
name = "clawdefender-sensor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OS-level sensors for process and filesystem monitoring"

[dependencies]
clawdefender-core = { path = "../clawdefender-core" }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
nix = { version = "0.31", features = ["process", "signal"] }
notify = "7"
sysinfo = "0.33"
futures = "0.3"
uuid = { workspace = true }
unicode-normalization = "0.1"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
toml = { workspace = true }
clawdefender-daemon = { path = "../clawdefender-daemon" }
