[package]
name = "clawdefender-slm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Small language model integration for policy decisions"

[dependencies]
clawdefender-core = { path = "../clawdefender-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }
futures-util = { version = "0.3", optional = true }
tokio-util = { version = "0.7", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
libc = { version = "0.2", optional = true }
llama_cpp = { version = "0.3", optional = true }
num_cpus = "1"

[features]
default = []
cloud = ["reqwest"]
download = ["reqwest", "sha2", "futures-util", "tokio-util", "uuid", "libc"]
gguf = ["llama_cpp"]

[[test]]
name = "download_integration_test"
required-features = ["download"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
