[package]
name = "clawdefender-swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-agent swarm coordination for ClawDefender"

[dependencies]
clawdefender-core = { path = "../clawdefender-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { workspace = true }
uuid = { workspace = true }
axum = "0.8"
tower = "0.5"
http-body-util = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
