[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "clawdefender-example-python"
version = "0.1.0"
description = "Example MCP server with ClawDefender integration (Level 3 Claw Compliant)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "clawdefender-sdk>=0.5.0",
]

[project.scripts]
example-server = "server:main"
