[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawdefender-agent"
version = "0.5.0-beta"
description = "Python agent self-protection package for ClawDefender guardrails"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "ClawDefender Contributors" }]
keywords = ["ai-safety", "guardrails", "agent", "sandboxing", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25.0", "psutil>=5.9.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-mock>=3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/clawdefender"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
